@@ -65,12 +65,21 @@
             <field name="view_id" ref="view_move_line_tree_readonly"/>
             <field name="view_mode">tree,form</field>
         </record>
-        <record id="action_move_line_tree_payment" model="ir.actions.act_window">
-            <field name="name">Payments Selection</field>
+        <record id="action_move_line_tree_payable_payment" model="ir.actions.act_window">
+            <field name="name">Payable Payments Selection</field>
             <field name="res_model">account.move.line</field>
             <field name="view_id" ref="account_streamline.view_move_line_tree_readonly"/>
             <field name="search_view_id" ref="account.view_account_move_line_filter" />
-            <field name="domain">['|', ('reconcile_id', '=', False), ('reconcile_partial_id', '!=', False), ('account_id.type', 'in', ['payable','receivable']), ('state', '=', 'valid'), ('move_id.state', '=', 'posted')]</field>
+            <field name="domain">['|', ('reconcile_id', '=', False), ('reconcile_partial_id', '!=', False), ('account_id.type', 'in', ['payable']), ('state', '=', 'valid'), ('move_id.state', '=', 'posted')]</field>
+            <field name="context">{'payment_view': True}</field>
+            <field name="view_mode">list</field>
+        </record>
+        <record id="action_move_line_tree_receivable_payment" model="ir.actions.act_window">
+            <field name="name">Receivable Payments Selection</field>
+            <field name="res_model">account.move.line</field>
+            <field name="view_id" ref="account_streamline.view_move_line_tree_readonly"/>
+            <field name="search_view_id" ref="account.view_account_move_line_filter" />
+            <field name="domain">['|', ('reconcile_id', '=', False), ('reconcile_partial_id', '!=', False), ('account_id.type', 'in', ['receivable']), ('state', '=', 'valid'), ('move_id.state', '=', 'posted')]</field>
             <field name="context">{'payment_view': True}</field>
             <field name="view_mode">list</field>
         </record>
