@@ -1,3 +1,7 @@
+account_streamline next
+
+- [TKT/2014/00429] Differentiate payable payment and receivable payment selections
+
 account_streamline 1.12.1
 ~~~~~~~~~~~~~~~~~~~~~~~~~
 
